# Intro_to_prog

./: .gitignore  CMakeLists.txt  Readme.md
lab01/: p01.cpp  p02.cpp  p03.cpp  p04.cpp  p05.cpp  p06.cpp  p07.cpp  p08.cpp  p09.cpp  p10.cpp
lab02/: p01.cpp  p02.cpp  p03.cpp  p04.cpp  p05.cpp  p06.cpp  p07.cpp  p08.cpp  p09.cpp  p10.cpp
ojmid/: p1000.cpp  p1001.cpp  p1002.cpp  p1003.cpp
