cmake_minimum_required(VERSION 3.26)
project(com_122)

set(CMAKE_CXX_STANDARD 17)

#lab01

add_executable(lab01-p01 "${PROJECT_SOURCE_DIR}/lab01/p01.cpp"
        lab01/p01.cpp)

add_executable(lab01-p02 "${PROJECT_SOURCE_DIR}/lab01/p02.cpp"
        lab01/p02.cpp)

add_executable(lab01-p03 "${PROJECT_SOURCE_DIR}/lab01/p03.cpp"
        lab01/p03.cpp)

add_executable(lab01-p04 "${PROJECT_SOURCE_DIR}/lab01/p04.cpp"
        lab01/p04.cpp)

add_executable(lab01-p05 "${PROJECT_SOURCE_DIR}/lab01/p05.cpp"
        lab01/p05.cpp)

add_executable(lab01-p06 "${PROJECT_SOURCE_DIR}/lab01/p06.cpp"
        lab01/p06.cpp)

add_executable(lab01-p07 "${PROJECT_SOURCE_DIR}/lab01/p07.cpp"
        lab01/p07.cpp)

add_executable(lab01-p08 "${PROJECT_SOURCE_DIR}/lab01/p08.cpp"
        lab01/p08.cpp)

add_executable(lab01-p09 "${PROJECT_SOURCE_DIR}/lab01/p09.cpp"
        lab01/p09.cpp)

add_executable(lab01-p10 "${PROJECT_SOURCE_DIR}/lab01/p10.cpp"
        lab01/p10.cpp)

#lab02

add_executable(lab02-p01 "${PROJECT_SOURCE_DIR}/lab01/p02.cpp"
        lab02/p01.cpp)

add_executable(lab02-p02 "${PROJECT_SOURCE_DIR}/lab02/p02.cpp"
        lab02/p02.cpp)

add_executable(lab02-p03 "${PROJECT_SOURCE_DIR}/lab02/p03.cpp"
        lab02/p03.cpp)

add_executable(lab02-p04 "${PROJECT_SOURCE_DIR}/lab02/p04.cpp"
        lab02/p04.cpp)

add_executable(lab02-p05 "${PROJECT_SOURCE_DIR}/lab02/p05.cpp"
        lab02/p05.cpp)

add_executable(lab02-p06 "${PROJECT_SOURCE_DIR}/lab02/p06.cpp"
        lab02/p06.cpp)

add_executable(lab02-p07 "${PROJECT_SOURCE_DIR}/lab02/p07.cpp"
        lab02/p07.cpp)

add_executable(lab02-p08 "${PROJECT_SOURCE_DIR}/lab02/p08.cpp"
        lab02/p08.cpp)

add_executable(lab02-p09 "${PROJECT_SOURCE_DIR}/lab02/p09.cpp"
        lab02/p09.cpp)

add_executable(lab02-p10 "${PROJECT_SOURCE_DIR}/lab02/p10.cpp"
        lab02/p10.cpp)

#beecrowd

add_executable(ojmid-p1000 "${PROJECT_SOURCE_DIR}/ojmid/p1000.cpp"
        ojmid/p1000.cpp)

add_executable(ojmid-p1001 "${PROJECT_SOURCE_DIR}/ojmid/p1001.cpp"
        ojmid/p1001.cpp)

add_executable(ojmid-p1002 "${PROJECT_SOURCE_DIR}/ojmid/p1002.cpp"
        ojmid/p1002.cpp)

add_executable(ojmid-p1003 "${PROJECT_SOURCE_DIR}/ojmid/p1003.cpp"
        ojmid/p1003.cpp)


